{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 51,
  "lineage": "92eca2ff-c7cb-4bda-a02b-82a19a320738",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981894193627:security-group/sg-0731a8f59f382ceae",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0731a8f59f382ceae",
            "ingress": [],
            "name": "vmw-eks-cluster20211004045930030800000008",
            "name_prefix": "vmw-eks-cluster",
            "owner_id": "981894193627",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vmw-eks-cluster-eks_cluster_sg",
              "application": "vmw",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "vmw-eks-cluster-eks_cluster_sg",
              "application": "vmw",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0089e2e8ca698668b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vmw-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981894193627:security-group/sg-0fdd100c7d8fb89b9",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0fdd100c7d8fb89b9",
            "ingress": [],
            "name": "vmw-eks-cluster20211004045929320000000007",
            "name_prefix": "vmw-eks-cluster",
            "owner_id": "981894193627",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vmw-eks-cluster-eks_worker_sg",
              "application": "vmw",
              "environment": "dev",
              "kubernetes.io/cluster/vmw-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "vmw-eks-cluster-eks_worker_sg",
              "application": "vmw",
              "environment": "dev",
              "kubernetes.io/cluster/vmw-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0089e2e8ca698668b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vmw-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-2086218898",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0731a8f59f382ceae",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vmw-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-2089895235",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0731a8f59f382ceae",
            "self": false,
            "source_security_group_id": "sg-0fdd100c7d8fb89b9",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vmw-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-3938180863",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0fdd100c7d8fb89b9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vmw-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-772372304",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fdd100c7d8fb89b9",
            "self": false,
            "source_security_group_id": "sg-0731a8f59f382ceae",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vmw-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-2541928548",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fdd100c7d8fb89b9",
            "self": false,
            "source_security_group_id": "sg-0731a8f59f382ceae",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vmw-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-2652501215",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0fdd100c7d8fb89b9",
            "self": false,
            "source_security_group_id": "sg-0fdd100c7d8fb89b9",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vmw-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vmw-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0fc9f7b74100a79f3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-225-93-174.compute-1.amazonaws.com",
            "public_ip": "3.225.93.174",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vmw-vpc-us-east-1a",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "vmw-vpc-us-east-1a",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vmw-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981894193627:internet-gateway/igw-08c64426d8be5fd59",
            "id": "igw-08c64426d8be5fd59",
            "owner_id": "981894193627",
            "tags": {
              "Name": "vmw-vpc",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "vmw-vpc",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0089e2e8ca698668b"
          },
          "dependencies": [
            "module.vmw-vpc.aws_vpc.this",
            "module.vmw-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vmw-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fc9f7b74100a79f3",
            "connectivity_type": "public",
            "id": "nat-0af2f115ec4672b0b",
            "network_interface_id": "eni-0c32b5342567633c3",
            "private_ip": "10.0.4.245",
            "public_ip": "3.225.93.174",
            "subnet_id": "subnet-0161c8e81ff95ff41",
            "tags": {
              "Name": "vmw-vpc-us-east-1a",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "vmw-vpc-us-east-1a",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vmw-vpc.aws_eip.nat",
            "module.vmw-vpc.aws_internet_gateway.this",
            "module.vmw-vpc.aws_subnet.public",
            "module.vmw-vpc.aws_vpc.this",
            "module.vmw-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vmw-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08c64426d8be5fd59",
            "id": "r-rtb-064ece96ad89e53011080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-064ece96ad89e5301",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vmw-vpc.aws_internet_gateway.this",
            "module.vmw-vpc.aws_route_table.public",
            "module.vmw-vpc.aws_vpc.this",
            "module.vmw-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vmw-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981894193627:route-table/rtb-092fa25df5dd20f40",
            "id": "rtb-092fa25df5dd20f40",
            "owner_id": "981894193627",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vmw-vpc-private",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "vmw-vpc-private",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0089e2e8ca698668b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vmw-vpc.aws_vpc.this",
            "module.vmw-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vmw-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981894193627:route-table/rtb-064ece96ad89e5301",
            "id": "rtb-064ece96ad89e5301",
            "owner_id": "981894193627",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vmw-vpc-public",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "vmw-vpc-public",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0089e2e8ca698668b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vmw-vpc.aws_vpc.this",
            "module.vmw-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vmw-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056793103069873ea",
            "route_table_id": "rtb-092fa25df5dd20f40",
            "subnet_id": "subnet-07952e37989188d3b"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vmw-vpc.aws_route_table.private",
            "module.vmw-vpc.aws_subnet.private",
            "module.vmw-vpc.aws_vpc.this",
            "module.vmw-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0ec2e8d5598c47c",
            "route_table_id": "rtb-092fa25df5dd20f40",
            "subnet_id": "subnet-05bdae49ef3b29da0"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vmw-vpc.aws_route_table.private",
            "module.vmw-vpc.aws_subnet.private",
            "module.vmw-vpc.aws_vpc.this",
            "module.vmw-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b917a2fd1d1970bd",
            "route_table_id": "rtb-092fa25df5dd20f40",
            "subnet_id": "subnet-0e3a295a72b0f5fce"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vmw-vpc.aws_route_table.private",
            "module.vmw-vpc.aws_subnet.private",
            "module.vmw-vpc.aws_vpc.this",
            "module.vmw-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vmw-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3d8b6482cc15271",
            "route_table_id": "rtb-064ece96ad89e5301",
            "subnet_id": "subnet-0161c8e81ff95ff41"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vmw-vpc.aws_route_table.public",
            "module.vmw-vpc.aws_subnet.public",
            "module.vmw-vpc.aws_vpc.this",
            "module.vmw-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbfb6dd6fff25131",
            "route_table_id": "rtb-064ece96ad89e5301",
            "subnet_id": "subnet-078c1dbf15b013f86"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vmw-vpc.aws_route_table.public",
            "module.vmw-vpc.aws_subnet.public",
            "module.vmw-vpc.aws_vpc.this",
            "module.vmw-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0089faf9df6182e79",
            "route_table_id": "rtb-064ece96ad89e5301",
            "subnet_id": "subnet-0e870e678e98edba8"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vmw-vpc.aws_route_table.public",
            "module.vmw-vpc.aws_subnet.public",
            "module.vmw-vpc.aws_vpc.this",
            "module.vmw-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vmw-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981894193627:subnet/subnet-07952e37989188d3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-07952e37989188d3b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "981894193627",
            "tags": {
              "Name": "vmw-vpc-private-us-east-1a",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "vmw-vpc-private-us-east-1a",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0089e2e8ca698668b"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vmw-vpc.aws_vpc.this",
            "module.vmw-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981894193627:subnet/subnet-05bdae49ef3b29da0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-05bdae49ef3b29da0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "981894193627",
            "tags": {
              "Name": "vmw-vpc-private-us-east-1b",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "vmw-vpc-private-us-east-1b",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0089e2e8ca698668b"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vmw-vpc.aws_vpc.this",
            "module.vmw-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981894193627:subnet/subnet-0e3a295a72b0f5fce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0e3a295a72b0f5fce",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "981894193627",
            "tags": {
              "Name": "vmw-vpc-private-us-east-1c",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "vmw-vpc-private-us-east-1c",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0089e2e8ca698668b"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vmw-vpc.aws_vpc.this",
            "module.vmw-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vmw-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981894193627:subnet/subnet-0161c8e81ff95ff41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0161c8e81ff95ff41",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "981894193627",
            "tags": {
              "Name": "vmw-vpc-public-us-east-1a",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "vmw-vpc-public-us-east-1a",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0089e2e8ca698668b"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vmw-vpc.aws_vpc.this",
            "module.vmw-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981894193627:subnet/subnet-078c1dbf15b013f86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-078c1dbf15b013f86",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "981894193627",
            "tags": {
              "Name": "vmw-vpc-public-us-east-1b",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "vmw-vpc-public-us-east-1b",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0089e2e8ca698668b"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vmw-vpc.aws_vpc.this",
            "module.vmw-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981894193627:subnet/subnet-0e870e678e98edba8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0e870e678e98edba8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "981894193627",
            "tags": {
              "Name": "vmw-vpc-public-us-east-1c",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "vmw-vpc-public-us-east-1c",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0089e2e8ca698668b"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vmw-vpc.aws_vpc.this",
            "module.vmw-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vmw-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981894193627:vpc/vpc-0089e2e8ca698668b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01bd87939c2da4e07",
            "default_route_table_id": "rtb-09f834e2daa21e700",
            "default_security_group_id": "sg-07439a6239d944d14",
            "dhcp_options_id": "dopt-f525258f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0089e2e8ca698668b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09f834e2daa21e700",
            "owner_id": "981894193627",
            "tags": {
              "Name": "vmw-vpc",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "vmw-vpc",
              "kubernetes.io/cluster/vmw-eks-cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}